test(chip): update multiselect tests to set medium rounding to the chips

--- a/tests/visual/src/misc/multiselect.html
+++ b/tests/visual/src/misc/multiselect.html
@@ -45,14 +45,14 @@
         <div>
             <span is="MultiSelect">
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Normal" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Normal" rounded="medium" showRemoveIcon="true"></div>
                 </slot>
             </span>
         </div>
         <div dir="rtl">
             <span is="MultiSelect">
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Normal" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Normal" rounded="medium" showRemoveIcon="true"></div>
                 </slot>
             </span>
         </div>
@@ -62,14 +62,14 @@
         <div>
             <span is="MultiSelect" hover>
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Hover" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Hover" rounded="medium" showRemoveIcon="true"></div>
                 </slot>
             </span>
         </div>
         <div dir="rtl">
             <span is="MultiSelect" hover>
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Hover" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Hover" rounded="medium" showRemoveIcon="true"></div>
                 </slot>
             </span>
         </div>
@@ -79,14 +79,14 @@
         <div>
             <span is="MultiSelect" focus>
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Focus" showRemoveIcon="true" focus></div>
+                    <div is="Chip" text="Focus" rounded="medium" showRemoveIcon="true" focus></div>
                 </slot>
             </span>
         </div>
         <div dir="rtl">
             <span is="MultiSelect" focus>
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Focus" showRemoveIcon="true" focus></div>
+                    <div is="Chip" text="Focus" rounded="medium" showRemoveIcon="true" focus></div>
                 </slot>
             </span>
         </div>
@@ -96,14 +96,14 @@
         <div>
             <span is="MultiSelect" disabled>
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Disabled" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Disabled" rounded="medium" showRemoveIcon="true"></div>
                 </slot>
             </span>
         </div>
         <div dir="rtl">
             <span is="MultiSelect" disabled>
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Disabled" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Disabled" rounded="medium" showRemoveIcon="true"></div>
                 </slot>
             </span>
         </div>
@@ -113,14 +113,14 @@
         <div>
             <span is="MultiSelect" invalid>
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Invalid" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Invalid" rounded="medium" showRemoveIcon="true"></div>
                 </slot>
             </span>
         </div>
         <div dir="rtl">
             <span is="MultiSelect" invalid>
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Invalid" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Invalid" rounded="medium" showRemoveIcon="true"></div>
                 </slot>
             </span>
         </div>
@@ -130,14 +130,14 @@
         <div>
             <span is="MultiSelect" invalid focus>
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Invalid + Focus" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Invalid + Focus" rounded="medium" showRemoveIcon="true"></div>
                 </slot>
             </span>
         </div>
         <div dir="rtl">
             <span is="MultiSelect" invalid focus>
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Invalid + Focus" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Invalid + Focus" rounded="medium" showRemoveIcon="true"></div>
                 </slot>
             </span>
         </div>
@@ -156,16 +156,16 @@
         <div>
             <span is="MultiSelect">
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Multi-line" showRemoveIcon="true"></div>
-                    <div is="Chip" text="Multi-line + Overflow with a very very very long text" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Multi-line" showRemoveIcon="true" rounded="medium"></div>
+                    <div is="Chip" text="Multi-line + Overflow with a very very very long text" showRemoveIcon="true" rounded="medium"></div>
                 </slot>
             </span>
         </div>
         <div dir="rtl">
             <span is="MultiSelect">
                 <slot is="MultiSelectChipList">
-                    <div is="Chip" text="Multi-line" showRemoveIcon="true"></div>
-                    <div is="Chip" text="Multi-line + Overflow with a very very very very very very long text" showRemoveIcon="true"></div>
+                    <div is="Chip" text="Multi-line" showRemoveIcon="true" rounded="medium"></div>
+                    <div is="Chip" text="Multi-line + Overflow with a very very very very very very long text" showRemoveIcon="true" rounded="medium"></div>
                 </slot>
             </span>
         </div>
