--- a/tests/visual/src/misc/form-field-dropdowns-angular.html
+++ b/tests/visual/src/misc/form-field-dropdowns-angular.html
@@ -51,7 +51,7 @@
                     <div>
                         <span is="MultiSelect">
                             <slot is="MultiSelectChipList">
-                                <div is="Chip" text="Female" showRemoveIcon="true"></div>
+                                <div is="Chip" text="Female" showRemoveIcon="true" rounded="medium"></div>
                             </slot>
                         </span>
                     </div>
@@ -90,7 +90,7 @@
                     <div class="k-form-field-wrap">
                         <span is="MultiSelect">
                             <slot is="MultiSelectChipList">
-                                <div is="Chip" text="Female" showRemoveIcon="true"></div>
+                                <div is="Chip" text="Female" showRemoveIcon="true" rounded="medium"></div>
                             </slot>
                         </span>
                     </div>
