--- a/tests/visual/src/misc/form-field-dropdowns-react.html
+++ b/tests/visual/src/misc/form-field-dropdowns-react.html
@@ -44,7 +44,7 @@
                     <label class="k-label">MultiSelect:</label>
                     <span is="MultiSelect">
                         <slot is="MultiSelectChipList">
-                            <div is="Chip" text="Female" showRemoveIcon="true"></div>
+                            <div is="Chip" text="Female" showRemoveIcon="true" rounded="medium"></div>
                         </slot>
                     </span>
                 </div>
@@ -82,7 +82,7 @@
                     <div class="k-form-field-wrap">
                         <span is="MultiSelect">
                             <slot is="MultiSelectChipList">
-                                <div is="Chip" text="Female" showRemoveIcon="true"></div>
+                                <div is="Chip" text="Female" showRemoveIcon="true" rounded="medium"></div>
                             </slot>
                         </span>
                     </div>
