--- a/tests/visual/src/misc/multiselect-size.html
+++ b/tests/visual/src/misc/multiselect-size.html
@@ -22,24 +22,24 @@
         <span>small</span>
         <span is="MultiSelect" size="small">
             <slot is="MultiSelectChipList" size="small">
-                <div is="Chip" text="Chip Text" size="small" showRemoveIcon="true"></div>
-                <div is="Chip" text="Chip Text" size="small" showRemoveIcon="true"></div>
+                <div is="Chip" text="Chip Text" size="small" showRemoveIcon="true" rounded="medium"></div>
+                <div is="Chip" text="Chip Text" size="small" showRemoveIcon="true" rounded="medium"></div>
             </slot>
         </span>
 
         <span>medium</span>
         <span is="MultiSelect" size="medium">
             <slot is="MultiSelectChipList">
-                <div is="Chip" text="Chip Text" size="medium" showRemoveIcon="true"></div>
-                <div is="Chip" text="Chip Text" size="medium" showRemoveIcon="true"></div>
+                <div is="Chip" text="Chip Text" size="medium" showRemoveIcon="true" rounded="medium"></div>
+                <div is="Chip" text="Chip Text" size="medium" showRemoveIcon="true" rounded="medium"></div>
             </slot>
         </span>
 
         <span>large</span>
         <span is="MultiSelect" size="large">
             <slot is="MultiSelectChipList" size="large">
-                <div is="Chip" text="Chip Text" size="large" showRemoveIcon="true"></div>
-                <div is="Chip" text="Chip Text" size="large" showRemoveIcon="true"></div>
+                <div is="Chip" text="Chip Text" size="large" showRemoveIcon="true" rounded="medium"></div>
+                <div is="Chip" text="Chip Text" size="large" showRemoveIcon="true" rounded="medium"></div>
             </slot>
         </span>
 
