test(textarea): update textarea visual test

--- a/tests/visual/src/misc/textarea.html
+++ b/tests/visual/src/misc/textarea.html
@@ -80,6 +80,14 @@
             <textarea is="Textarea" value="Invalid focus" invalid focus></textarea>
         </div>
 
+        <!-- vertical overflow -->
+        <div>
+            <textarea is="Textarea" rows="3" value="Long text: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et dolorum, illo asperiores alias cum facere illum qui sapiente possimus consectetur magnam aperiam eveniet esse molestias aut repudiandae sit aliquam perspiciatis."></textarea>
+        </div>
+        <div dir="rtl">
+            <textarea is="Textarea" rows="3" value="Long text: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et dolorum, illo asperiores alias cum facere illum qui sapiente possimus consectetur magnam aperiam eveniet esse molestias aut repudiandae sit aliquam perspiciatis."></textarea>
+        </div>
+
     </div>
 
 </body>
