test(form): add form button focus state

--- a/tests/visual/src/misc/form-misc-react.html
+++ b/tests/visual/src/misc/form-misc-react.html
@@ -139,7 +139,7 @@
                 </div>
 
                 <div class="k-form-buttons">
-                    <button is="Button" themeColor="primary" class="k-form-submit">Submit</button>
+                    <button is="Button" themeColor="primary" class="k-form-submit" focus>Submit</button>
                     <button is="Button" class="k-form-clear">Clear</button>
                 </div>
             </form>
