--- a/tests/visual/src/misc/form-misc-angular.html
+++ b/tests/visual/src/misc/form-misc-angular.html
@@ -140,7 +140,7 @@
                 </kendo-form-field>
 
                 <div class="k-form-buttons">
-                    <button is="Button" themeColor="primary" class="k-form-submit">Submit</button>
+                    <button is="Button" themeColor="primary" class="k-form-submit" focus>Submit</button>
                     <button is="Button" class="k-form-clear">Clear</button>
                 </div>
             </form>
