test(filter): update filter reference rendering to match design

--- a/tests/visual/src/misc/filter.html
+++ b/tests/visual/src/misc/filter.html
@@ -27,10 +27,10 @@
                                 </div>
                             </div>
                             <div class="k-filter-toolbar-item">
-                                <button is="Button" icon="filter-add-expression"></button>
+                                <button is="Button" icon="filter-add-expression">Add Expression</button>
                             </div>
                             <div class="k-filter-toolbar-item">
-                                <button is="Button" icon="filter-add-group"></button>
+                                <button is="Button" icon="filter-add-group">Add Group</button>
                             </div>
                             <div class="k-filter-toolbar-item">
                                 <button is="Button" fillMode="flat" icon="close"></button>
@@ -42,14 +42,49 @@
                             <div class="k-filter-toolbar">
                                 <div class="k-toolbar">
                                     <div class="k-filter-toolbar-item k-filter-field">
+                                        <input is="DropdownList" value="Name" />
+                                    </div>
+                                    <div class="k-filter-toolbar-item k-filter-operator">
+                                        <input is="DropdownList" value="Is equal to" />
+                                    </div>
+                                    <div class="k-filter-toolbar-item k-filter-value">
+                                        <input is="Textbox" placeholder="James"/>
+                                    </div>
+                                    <div class="k-filter-toolbar-item">
+                                        <button is="Button" fillMode="flat" icon="close"></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="k-filter-item">
+                            <div class="k-filter-toolbar">
+                                <div class="k-toolbar">
+                                    <div class="k-filter-toolbar-item k-filter-field">
+                                        <input is="DropdownList" value="Price" />
+                                    </div>
+                                    <div class="k-filter-toolbar-item k-filter-operator">
+                                        <input is="DropdownList" value="Is greater than" />
+                                    </div>
+                                    <div class="k-filter-toolbar-item k-filter-value">
+                                        <input is="NumericTextbox" placeholder="100,00"/>
+                                    </div>
+                                    <div class="k-filter-toolbar-item">
+                                        <button is="Button" fillMode="flat" icon="close"></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="k-filter-item">
+                            <div class="k-filter-toolbar">
+                                <div class="k-toolbar">
+                                    <div class="k-filter-toolbar-item k-filter-field">
                                         <input is="DropdownList" value="Discontinued" />
                                     </div>
                                     <div class="k-filter-toolbar-item k-filter-operator">
-                                        <input is="DropdownList" value="Is greater than or equal to" />
+                                        <input is="DropdownList" value="Is equal to" />
                                     </div>
                                     <div class="k-filter-toolbar-item k-filter-value">
-                                        <input is="Checkbox" />
-                                        <label class="k-checkbox-label k-no-text">&#8203;</label>
+                                        <input is="DropdownList" value="False"/>
                                     </div>
                                     <div class="k-filter-toolbar-item">
                                         <button is="Button" fillMode="flat" icon="close"></button>
@@ -60,39 +95,22 @@
                         <li class="k-filter-item">
                             <div class="k-filter-toolbar">
                                 <div class="k-toolbar">
-                                    <div class="k-filter-toolbar-item k-filter-field">
-                                        <input is="DropdownList" value="UnitsInStock" />
+                                    <div class="k-filter-toolbar-item k-filter-filed">
+                                        <input is="DropdownList" value="First Ordered">
                                     </div>
-                                    <div class="k-filter-toolbar-item k-filter-operator">
-                                        <input is="DropdownList" value="Is equal to" />
+                                    <div class="k-filter-toolbar-item">
+                                        <div class="k-filter-operator">
+                                            <input is="DropdownList" value="Is before">
+                                        </div>
                                     </div>
                                     <div class="k-filter-toolbar-item k-filter-value">
-                                        <input is="Textbox" />
+                                        <input is="DatePicker" placeholder="1/21/2021">
                                     </div>
                                     <div class="k-filter-toolbar-item">
                                         <button is="Button" fillMode="flat" icon="close"></button>
                                     </div>
                                 </div>
                             </div>
-                        </li>
-                        <li class="k-filter-item">
-                            <div class="k-filter-toolbar">
-                                <div class="k-toolbar">
-                                    <div class="k-filter-toolbar-item k-filter-field">
-                                        <input is="DropdownList" value="UnitsInStock" />
-                                    </div>
-                                    <div class="k-filter-toolbar-item k-filter-operator">
-                                        <input is="DropdownList" value="Is equal to" />
-                                    </div>
-                                    <div class="k-filter-toolbar-item k-filter-value">
-                                        <input is="NumericTextbox" />
-                                    </div>
-                                    <div class="k-filter-toolbar-item">
-                                        <button is="Button" fillMode="flat" icon="close"></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
                         <li class="k-filter-item">
                             <div class="k-filter-toolbar">
                                 <div class="k-toolbar">
@@ -103,76 +121,66 @@
                                         </div>
                                     </div>
                                     <div class="k-filter-toolbar-item">
-                                        <button is="Button" icon="filter-add-expression"></button>
+                                            <button is="Button" icon="filter-add-expression">Add Expression</button>
                                     </div>
                                     <div class="k-filter-toolbar-item">
-                                        <button is="Button" icon="filter-add-group"></button>
+                                            <button is="Button" icon="filter-add-group">Add Group</button>
+                                    </div>
+                                    <div class="k-filter-toolbar-item">
+                                            <button is="Button" fillMode="flat" icon="close"></button>
+                                    </div>
+                                </div>
+                            </div>
+                    <ul class="k-filter-lines">
+                        <li class="k-filter-item">
+                            <div class="k-filter-toolbar">
+                                <div class="k-toolbar">
+                                    <div class="k-filter-toolbar-item k-filter-field">
+                                        <input is="DropdownList" value="Name" />
+                                    </div>
+                                    <div class="k-filter-toolbar-item k-filter-operator">
+                                        <input is="DropdownList" value="Is empty" />
                                     </div>
                                     <div class="k-filter-toolbar-item">
                                         <button is="Button" fillMode="flat" icon="close"></button>
                                     </div>
                                 </div>
                             </div>
-                            <ul class="k-filter-lines">
-                                <li class="k-filter-item">
-                                    <div class="k-filter-toolbar">
-                                        <div class="k-toolbar">
-                                            <div class="k-filter-toolbar-item">
-                                                <div class="k-widget k-button-group">
-                                                    <button is="Button" selected>And</button>
-                                                    <button is="Button">Or</button>
-                                                </div>
-                                            </div>
-                                            <div class="k-filter-toolbar-item">
-                                                <button is="Button" icon="filter-add-expression"></button>
-                                            </div>
-                                            <div class="k-filter-toolbar-item">
-                                                <button is="Button" icon="filter-add-group"></button>
-                                            </div>
-                                            <div class="k-filter-toolbar-item">
-                                                <button is="Button" fillMode="flat" icon="close"></button>
-                                            </div>
-                                        </div>
+                        </li>
+                        <li class="k-filter-item">
+                            <div class="k-filter-toolbar">
+                                <div class="k-toolbar">
+                                    <div class="k-filter-toolbar-item k-filter-field">
+                                        <input is="DropdownList" value="Price" />
                                     </div>
-                                    <ul class="k-filter-lines">
-                                        <li class="k-filter-item">
-                                            <div class="k-filter-toolbar">
-                                                <div class="k-toolbar">
-                                                    <div class="k-filter-toolbar-item k-filter-field">
-                                                        <input is="DropdownList" value="DeliveryDate" />
-                                                    </div>
-                                                    <div class="k-filter-toolbar-item k-filter-operator">
-                                                        <input is="DropdownList" value="Is equal to" />
-                                                    </div>
-                                                    <div class="k-filter-toolbar-item k-filter-value">
-                                                        <input is="DatePicker" />
-                                                    </div>
-                                                    <div class="k-filter-toolbar-item">
-                                                        <button is="Button" fillMode="flat" icon="close"></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
+                                    <div class="k-filter-toolbar-item k-filter-operator">
+                                        <input is="DropdownList" value="Is not null" />
+                                    </div>
+                                    <div class="k-filter-toolbar-item">
+                                        <button is="Button" fillMode="flat" icon="close"></button>
+                                    </div>
+                                </div>
+                            </div>
                         </li>
                     </ul>
                 </li>
-            </ul>
-            <div class="k-filter-preview"><span class="k-filter-preview-bracket">(</span><span
-                    class="k-filter-preview-field">Discontinued</span><span class="k-filter-preview-criteria"> Is equal to </span><span
-                    class="k-filter-preview-value">'true'</span><span class="k-filter-preview-operator"> AND </span><span
-                    class="k-filter-preview-field">UnitsInStock</span><span class="k-filter-preview-criteria"> Is equal to </span><span
-                    class="k-filter-preview-value">'2'</span><span class="k-filter-preview-operator"> AND </span><span
-                    class="k-filter-preview-bracket">(</span><span class="k-filter-preview-bracket">(</span><span
-                    class="k-filter-preview-field">DeliveryDate</span><span class="k-filter-preview-criteria"> Is equal to </span><span
-                    class="k-filter-preview-value">'Fri Aug 09 2019 00:00:00 GMT+0300 (Eastern European Summer Time)'</span><span
-                    class="k-filter-preview-bracket">)</span><span class="k-filter-preview-bracket">)</span><span
-                    class="k-filter-preview-bracket">)</span>
-            </div>
-            <button is="Button" class="k-filter-apply">Apply</button>
-        </div>
-    </div>
+            </li>
+        </ul>
+    </li>
+</ul>
+<div class="k-filter-preview"><span class="k-filter-preview-bracket">(</span><span
+    class="k-filter-preview-field">Discontinued</span><span class="k-filter-preview-criteria"> Is equal to </span><span
+    class="k-filter-preview-value">'False'</span><span class="k-filter-preview-operator"> AND </span><span
+    class="k-filter-preview-field">Price</span><span class="k-filter-preview-criteria"> Is greater than </span><span
+    class="k-filter-preview-value">'100,00'</span><span class="k-filter-preview-operator"> AND </span><span
+    class="k-filter-preview-bracket">(</span><span class="k-filter-preview-bracket">(</span><span
+    class="k-filter-preview-field">FirstOrdered</span><span class="k-filter-preview-criteria"> Is before </span><span
+    class="k-filter-preview-value">'Thursday Jan 21 2021'</span><span
+    class="k-filter-preview-bracket">)</span><span class="k-filter-preview-bracket">)</span><span
+    class="k-filter-preview-bracket">)</span>
+</div>
+<button is="Button" class="k-filter-apply">Apply</button>
+</div>
+</div>
 </body>
 </html>
