test(floating-label): add examples for focus, hover, disabled and invalid state

--- a/tests/visual/src/misc/floating-label.html
+++ b/tests/visual/src/misc/floating-label.html
@@ -28,51 +28,25 @@
 
         <!-- empty -->
         <div>
-            <span class="k-floating-label-container k-state-empty">
+            <span class="k-floating-label-container k-empty">
                 <input is="Textbox" />
                 <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container k-state-empty">
+            <span class="k-floating-label-container k-empty">
                 <input is="Textbox" />
                 <label class="k-label">Textbox label</label>
             </span>
         </div>
         <div>
-            <span class="k-floating-label-container k-state-empty">
+            <span class="k-floating-label-container k-empty">
                 <input is="Combobox" />
                 <label class="k-label">Combobox label</label>
             </span>
         </div>
         <div dir="rtl">
-            <span class="k-floating-label-container k-state-empty">
-                <input is="Combobox" />
-                <label class="k-label">Combobox label</label>
-            </span>
-        </div>
-
-        <!-- focus -->
-        <div>
-            <span class="k-floating-label-container k-state-focused">
-                <input is="Textbox" focus />
-                <label class="k-label">Textbox label</label>
-            </span>
-        </div>
-        <div dir="rtl">
-            <span class="k-floating-label-container k-state-focused">
-                <input is="Textbox" focus />
-                <label class="k-label">Textbox label</label>
-            </span>
-        </div>
-        <div>
-            <span class="k-floating-label-container k-state-focus">
-                <input is="Combobox" />
-                <label class="k-label">Combobox label</label>
-            </span>
-        </div>
-        <div dir="rtl">
-            <span class="k-floating-label-container k-state-focus">
+            <span class="k-floating-label-container k-empty">
                 <input is="Combobox" />
                 <label class="k-label">Combobox label</label>
             </span>
@@ -100,6 +74,110 @@
         <div dir="rtl">
             <span class="k-floating-label-container">
                 <input is="Combobox" value="Combobox value" />
+                <label class="k-label">Combobox label</label>
+            </span>
+        </div>
+
+        <!--hover-->
+        <div>
+            <span class="k-floating-label-container">
+                <input is="Textbox" value="Hover" hover />
+                <label class="k-label">Textbox label</label>
+            </span>
+        </div>
+        <div dir="rtl">
+            <span class="k-floating-label-container">
+                <input is="Textbox" value="Hover" hover />
+                <label class="k-label">Textbox label</label>
+            </span>
+        </div>
+        <div>
+            <span class="k-floating-label-container">
+                <input is="Combobox" value="Hover" hover />
+                <label class="k-label">Combobox label</label>
+            </span>
+        </div>
+        <div dir="rtl">
+            <span class="k-floating-label-container">
+                <input is="Combobox" value="Hover" hover />
+                <label class="k-label">Combobox label</label>
+            </span>
+        </div>
+
+        <!-- focus -->
+        <div>
+            <span class="k-floating-label-container">
+                <input is="Textbox" value="Focus" focus />
+                <label class="k-label">Textbox label</label>
+            </span>
+        </div>
+        <div dir="rtl">
+            <span class="k-floating-label-container">
+                <input is="Textbox" value="Focus" focus />
+                <label class="k-label">Textbox label</label>
+            </span>
+        </div>
+        <div>
+            <span class="k-floating-label-container">
+                <input is="Combobox" value="Focus" focus/>
+                <label class="k-label">Combobox label</label>
+            </span>
+        </div>
+        <div dir="rtl">
+            <span class="k-floating-label-container">
+                <input is="Combobox" value="Focus" focus/>
+                <label class="k-label">Combobox label</label>
+            </span>
+        </div>
+
+         <!--disabled-->
+         <div>
+            <span class="k-floating-label-container">
+                <input is="Textbox" value="Disabled" disabled />
+                <label class="k-label">Textbox label</label>
+            </span>
+        </div>
+        <div dir="rtl">
+            <span class="k-floating-label-container">
+                <input is="Textbox" value="Disabled" disabled />
+                <label class="k-label">Textbox label</label>
+            </span>
+        </div>
+        <div>
+            <span class="k-floating-label-container">
+                <input is="Combobox" value="Disabled" disabled />
+                <label class="k-label">Combobox label</label>
+            </span>
+        </div>
+        <div dir="rtl">
+            <span class="k-floating-label-container">
+                <input is="Combobox" value="Disabled" disabled />
+                <label class="k-label">Combobox label</label>
+            </span>
+        </div>
+
+        <!--invalid-->
+        <div>
+            <span class="k-floating-label-container">
+                <input is="Textbox" value="Invalid value" invalid />
+                <label class="k-label">Textbox label</label>
+            </span>
+        </div>
+        <div dir="rtl">
+            <span class="k-floating-label-container">
+                <input is="Textbox" value="Invalid value" invalid />
+                <label class="k-label">Textbox label</label>
+            </span>
+        </div>
+        <div>
+            <span class="k-floating-label-container">
+                <input is="Combobox" value="Invalid value" invalid />
+                <label class="k-label">Combobox label</label>
+            </span>
+        </div>
+        <div dir="rtl">
+            <span class="k-floating-label-container">
+                <input is="Combobox" value="Invalid value" invalid />
                 <label class="k-label">Combobox label</label>
             </span>
         </div>
